<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".OptionsActivity"
    tools:showIn="@layout/activity_options">

    <TableLayout
        android:layout_width="413dp"
        android:layout_height="327dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#CDCDCD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.607">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="2dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/return_from_options"
                android:layout_width="250dp"
                android:layout_height="58dp"
                android:src="@drawable/options2" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/select_board"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <RadioGroup
                    android:id="@+id/radio_group_board_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="179dp"
                    tools:layout_editor_absoluteY="81dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="203dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/select_mines"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <RadioGroup
                    android:id="@+id/radio_group_number_mines"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="179dp"
                    tools:layout_editor_absoluteY="81dp" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp"
            android:gravity="center">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:paddingTop="8dp">

                <Button
                    android:id="@+id/done_options"
                    android:layout_width="130dp"
                    android:layout_height="36dp"
                    android:background="@drawable/buttonshape"
                    android:gravity="center"
                    android:shadowColor="#0A0A0A"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    android:text="@string/done"
                    android:textColor="#FFFFFF" />

            </FrameLayout>

        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>

